<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">Android_Project</string>
    <string name="search_hint">Search hint</string>
    <string name="action_settings">Settings</string>
    <string name="login_s">Student</string>
    <string name="login_t">Teacher or Tutor</string>
    <string android:id="@+id/string1" name="tutor_login" android:layout_width="wrap_content" android:layout_height="wrap_content">Tutor Login</string>
    <string name="student_login">Student Login</string>
    <string name="teacher_attendance">Attendance</string>
    <string name="teacher_self_assessment">Self Assessment </string>
    <string name="teacher_case_presentation">Case Presentation</string>
    <string name="student_grades">Grades</string>
    <string name="student_self_assessment">Self Assessment</string>
    <string name="student_case_presentation">Case Presentation</string>
    <string name="student">Student</string>
    <string name="teacher">Teacher</string>
    <string name="tutor">Tutor</string>
    <string name="student_attendance">Record Attendance</string>
    <string name="doDifferentForm">In relation to taking a History and Mental State Exam. 
    If you were to perform these tasks again, how might you perform them differently?</string>
    <string name="doDifferentHist">In relation to creating a Formulation including Risk Assessment. 
    If you were to perform these tasks again, how might you perform them differently?</string>
    <string name="reflection">Reflection</string>
    <string name="attendanceHeading">Attendance Menu</string>
    <string name="teachingProgram">Teaching Program</string>
    <string name="clinicalAttachment">Clinical Attachment</string>
    <string name="consultantSig">Consultant Signature</string>
    <string name="comments">Comments</string>
    <string name="searchAttend">Search students</string>
    <string name="select">Select</string>
    <string name="attendance">Attendance</string>
    <string name="teachingPlacement">Teaching Placement</string>
    <string name="submitString">Submit</string>

    <string-array name="weekArray">
        <item>Week 1</item>
        <item>Week 2</item>
        <item>Week 3</item>
        <item>Week 4</item>
        <item>Week 5</item>
        <item>Week 6</item>
    </string-array>
    <string-array name="dayArray">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
    </string-array>
    <string-array name="AMPMArray">
        <item>AM</item>
        <item>PM</item>
    </string-array>
    <string-array name="selfMarksArray">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>


    <string name="login">Please enter your Student Number and Password.</string>
    <string name="hint1">Username</string>
    <string name="hint2">Password</string>
    <string name="next1">Next</string>
    <string name="widw">What I did well.</string>
    <string name="mark">Mark</string>
    <string name="next2">Next</string>
    <string name="wici">What I could improve.</string>
    <string name="next3">Add diagnosis</string>
    <string name="my_profile">My Profile</string>
    <string name="history">History and Mental State exam</string>
    <string name="risk">Formulation (Including Risk Assessment)</string>
    <string name="history_marks"></string>
    <string name="formulation_marks"></string>
    <string name="home">Home</string>
    <string name="title_activity_record_attendance">RecordAttendance</string>
    <string name="hello_world">Hello world!</string>
    <string name="addStudent">Add student</string>
    <string name="ok">OK</string>
    <string name="title_activity_case_assessment">CaseAssessment</string>
    <string name="title_activity_student_profile">StudentProfile</string>
    <string name="title_activity_self_assesment_view">SelfAssessmentView</string>
    <string name="title_activity_teacher_student_view">TeacherStudentView</string>
    <string name="title_activity_case_assesment_edit">CaseAssessmentEdit</string>
    <string name="title_activity_formative_case">FormativeCase</string>
    <string name="title_activity_gg1">gg1</string>
    <string name="title_activity_clinical_attendance_view">ClinicalAttendanceView</string>
    <string name="title_activity_self_assessment">SelfAssessment</string>
    <string name="title_activity_reflection_view">ReflectionView</string>

</resources>
